@@ -194,6 +194,14 @@ Example    : \n\r\
 Description: \n\r\
 Forces players to crawl through the exit or room with this property.
 
+PROP_CLIMBABLE=\
+Property   : Prop_Climbable\n\r\
+Targets    : Exits, Rooms, Portals\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+Forces players to climb, fly, or use a ladder through the exit or room with this property.
+
 PROP_NODAMAGE=\
 Property   : Prop_NoDamage\n\r\
 Targets    : Mobs, Weapons\n\r\
