@@ -5,6 +5,8 @@
    4. (Internal) MiniWebServer renamed to CoffeeWebServer -- so many path/name changes
    5. Clan Position-based effects/abilities implemented. Standard Powers also still apply.
    6. Random Generator now supports post-processing tags in XML, MERGE parameters and NODETYPE_[dir] tags. See example.xml re-organization.
+   7. Portals can now be entered using the CLIMB skill.
+   8. New Property: Prop_Climbable - use for making rooms, exits, or portals require climbing (and benefit from ropes and ladders).
    *. finish collision management, against space ships at least.
    *. interacting items of diff tech level might damage each other
    *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
